Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-9586

disabling the welcome screen plugin destroys main windows's saved window state on Windows

    XMLWordPrintable

Details

    • Bug
    • Status: Closed
    • P3: Somewhat important
    • Resolution: Done
    • Qt Creator 2.8.0
    • Qt Creator 3.0.1
    • All Other Issues
    • None
    • Windows 7, Qt 5.1.0 RC1
    • a97b449f2b862a9320276ec14249920bbdd5ee58

    Description

      How to reproduce:

      • open Qt Creator (let's assume the welcome screen plugin is enabled)
      • maximize it's main window
      • disable the welcome screen plugin
      • exit Qt Creator
      • open Qt Creator

      Expected result:

      • Qt Creator opening in maximized state

      Actual result:

      • Qt Creator opening in weird state (see screen shot)
      • The window size is much too small but the decoration buttons look like they are in maximized state.

      This will now happen for every start of Qt Creator until I reactivate the Welcome Screen plugin.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              orgads Orgad Shaneh
              jbornema Joerg Bornemann
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes