MainWindow: Delay restoreWindowState

QLayout calls setMinimumSize, which breaks maximized state on Windows.

Task-number: QTCREATORBUG-9586
Change-Id: Ibd9ceb8bccbdf26c6369e86ad4918835d645ca1e
Reviewed-by: Eike Ziller <eike.ziller@digia.com>
Reviewed-by: Kai Koehne <kai.koehne@digia.com>